--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 install:
   - pip install -r requirements.txt
   - python setup.py develop
-script: pytest --cov=textgraph --cov-fail-under=100 --no-cov-on-fail --cov-report term
+script: pytest --cov=textgraph --cov-fail-under=100 --no-cov-on-fail --cov-report term --flake8
 
 after_success:
   - codecov
