--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ pytest==5.0.0
 coverage==4.5.3
 pytest-cov==2.7.1
 codecov==2.0.15
+flake8==3.7.7
+flake8-docstrings==1.3.0
+pydocstyle==3.0.0
+pytest-flake8==1.0.4
